Add all features.